# ROS2-AK80-64-T-Motor-example-for-Socket-CAN

./: CMakeLists.txt  README.md  README.txt  package.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/tmotor/include/tmotor/msg/: motor_cmd.h  motor_cmd.hpp  motor_debug.h  motor_debug.hpp  motor_output.h  motor_output.hpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/tmotor/include/tmotor/msg/detail/: motor_cmd__builder.hpp  motor_cmd__functions.c  motor_cmd__functions.h  motor_cmd__rosidl_typesupport_fastrtps_c.h  motor_cmd__rosidl_typesupport_fastrtps_cpp.hpp  motor_cmd__rosidl_typesupport_introspection_c.h  motor_cmd__rosidl_typesupport_introspection_cpp.hpp  (+32 more)
install/tmotor/share/tmotor/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/tmotor/share/tmotor/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  tmotorConfig.cmake  tmotor__rosidl_generator_cExport-noconfig.cmake  tmotor__rosidl_generator_cExport.cmake  tmotor__rosidl_generator_cppExport.cmake  tmotor__rosidl_typesupport_cExport-noconfig.cmake  tmotor__rosidl_typesupport_cExport.cmake  tmotor__rosidl_typesupport_cppExport-noconfig.cmake  tmotor__rosidl_typesupport_cppExport.cmake  tmotor__rosidl_typesupport_introspection_cExport-noconfig.cmake  tmotor__rosidl_typesupport_introspection_cExport.cmake  tmotor__rosidl_typesupport_introspection_cppExport-noconfig.cmake  tmotor__rosidl_typesupport_introspection_cppExport.cmake
install/tmotor/share/tmotor/msg/: MotorCmd.idl  MotorDebug.idl  MotorOutput.idl  MotorOutput.msg
log/: latest_build
msg/: MotorCmd.msg  MotorOutput.msg
tmotor/: CMakeLists.txt  canmotorlib.py  package.xml  run_motor.py  tmotor.perspective
tmotor/tmotor/: canmotorlib.py  run_motor.py
tmotor_interface/: CMakeLists.txt  package.xml
tmotor_interface/msg/: MotorCmd.msg  MotorDebug.msg
(+3 files in other folders)
